--- a/scss/top/_hero.scss
+++ b/scss/top/_hero.scss
@@ -23,6 +23,8 @@
   pointer-events: none;
   z-index: 0;
   will-change: transform;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
 .hero__content {
